[gd_scene load_steps=11 format=2]

[ext_resource path="res://DeckBuilder/Assets/cartas/custoDeckBuilder/custo8.png" type="Texture" id=1]
[ext_resource path="res://DeckBuilder/Assets/cartas/background/deploymentBackground.png" type="Texture" id=2]
[ext_resource path="res://DeckBuilder/Scripts/carta.gd" type="Script" id=3]
[ext_resource path="res://DeckBuilder/Scripts/declineButtom.gd" type="Script" id=4]
[ext_resource path="res://DeckBuilder/Scripts/confirmButton.gd" type="Script" id=5]
[ext_resource path="res://DeckBuilder/Assets/cartas/buttons/execute.png" type="Texture" id=6]
[ext_resource path="res://DeckBuilder/Assets/cartas/buttons/cancel.png" type="Texture" id=7]
[ext_resource path="res://DeckBuilder/Scripts/Area2Dclicked.gd" type="Script" id=8]
[ext_resource path="res://DeckBuilder/Assets/cartas/images/teste1.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96.5, 141 )

[node name="carta" type="Node2D"]
scale = Vector2( 0.498742, 0.478487 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 290.0 ],
"_edit_vertical_guides_": [ 547.0 ]
}

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="image" type="Sprite" parent="."]
position = Vector2( 3, -61.1875 )
scale = Vector2( 0.504019, 0.544742 )
z_index = -1
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 300, 300 )

[node name="custo" type="Sprite" parent="."]
position = Vector2( 73, -138 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="name" type="Label" parent="."]
margin_left = -47.0
margin_top = 2.0
margin_right = 48.0
margin_bottom = 31.0
text = "oi"
align = 1
valign = 1

[node name="description" type="Label" parent="."]
modulate = Color( 0.0470588, 0.00392157, 0.00392157, 1 )
margin_left = -48.0
margin_top = 38.0
margin_right = 47.0
margin_bottom = 84.0
text = "oi"
align = 1
valign = 3
autowrap = true

[node name="confirmButton" type="Button" parent="."]
margin_left = 31.0
margin_top = 80.0
margin_right = 57.0
margin_bottom = 102.0
icon = ExtResource( 6 )
flat = true
expand_icon = true
script = ExtResource( 5 )

[node name="declineButtom" type="Button" parent="."]
margin_left = -56.0
margin_top = 82.0
margin_right = -29.0
margin_bottom = 103.0
icon = ExtResource( 7 )
flat = true
expand_icon = true
script = ExtResource( 4 )

[node name="cardCount" type="Label" parent="."]
margin_left = -20.0504
margin_top = 115.0
margin_right = 19.9496
margin_bottom = 99.6868
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x / 5"
align = 1

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="pressed" from="confirmButton" to="confirmButton" method="_on_confirmButton_pressed"]
[connection signal="pressed" from="declineButtom" to="declineButtom" method="_on_declineButtom_pressed"]
